--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>title</title>
+  </head>
+  <body>
+    <h1>Vi Vo</h1>
+  </body>
+</html>
