add content to skills section

--- a/index.html
+++ b/index.html
@@ -6,5 +6,28 @@
   </head>
   <body>
     <h1>Vi Vo</h1>
+    <h2>UI UX Engineer</h2>
+    <h2>Skills</h2>
+      <h3>Front-end:</h3>
+        <ul>
+          <li>JavaScript</li>
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>jQuery</li>
+          <li>MVC</li>
+          <li>ReactJS</li>
+          <li>AngularJS</li>
+        </ul>
+      <h3>Back-end:</h3>
+        <ul>
+          <li>NodeJS</li>
+          <li>ExpressJS</li>
+          <li>MySQL</li>
+          <li>Sequelize</li>
+          <li>MongoDB</li>
+          <li>Mongoose</li>
+          <li>Kron</li>
+        </ul>
+      <h3>General:</h3>
   </body>
 </html>
