add content under general

--- a/index.html
+++ b/index.html
@@ -29,5 +29,14 @@
           <li>Kron</li>
         </ul>
       <h3>General:</h3>
+        <ul>
+          <li>Git</li>
+          <li>Grunt</li>
+          <li>Gulp</li>
+          <li>TDD</li>
+          <li>Restful APIs</li>
+          <li>Third Party APIs</li>
+          <li>Photoshop</li>
+        </ul>
   </body>
 </html>
