--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>title</title>
+    <link rel='stylesheet' type='text/css' href='styles.css'>
   </head>
   <body>
     <h1>Vi Vo</h1>
