--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <link rel='stylesheet' type='text/css' href='styles.css'>
   </head>
   <body>
-    <h1>Vi Vo</h1>
-    <h2>UI UX Engineer</h2>
+    <ul class='nav'>
+      <li id='home'>Vi Vo</li>
+      <li>About</li>
+      <li>Skills</li>
+      <li>Portfolio</li>
+      <li>Hobby</li>
+      <li>Contact</li>
+    </ul>
+    <div class='landing'>
+      <h1>Vi Vo</h1>
+      <h2>UI UX Engineer</h2>
+    </div>
     <h2>About</h2>
       <p>I believe in making life more enjoyable. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, it follows that I can make a handsome impact building applications. I became a full stack software engineer so that I can have the freedom to build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
     <h2>Skills</h2>
