--- a/index.html
+++ b/index.html
@@ -2,22 +2,30 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>title</title>
     <link rel='stylesheet' type='text/css' href='styles.css'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
   </head>
   <body>
     <ul class='nav'>
       <li id='home'>Vi Vo</li>
-      <li>About</li>
-      <li>Skills</li>
-      <li>Portfolio</li>
-      <li>Hobby</li>
       <li>Contact</li>
+      <li>Hobby</li>
+      <li>Portfolio</li>
+      <li>Skills</li>
+      <li>About</li>
     </ul>
     <div class='landing'>
       <h1>Vi Vo</h1>
-      <h2>UI UX Engineer</h2>
+      <h3>UI UX Engineer</h3>
     </div>
+
+    <svg width="100%" height="50px" viewBox="0 0 30 30" preserveAspectRatio="none">
+    <polygon fill='grey' stroke-width='0'
+             points="4,30 10,0 20,0 26,30"/>
+    </svg>
+
     <h2>About</h2>
       <p>I believe in making life more enjoyable. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, it follows that I can make a handsome impact building applications. I became a full stack software engineer so that I can have the freedom to build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
     <h2>Skills</h2>
