allow click scroll

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <li>Contact</li>
       <li>Hobby</li>
       <li>Portfolio</li>
-      <li>Skills</li>
+      <li><a href='#skills'>Skills</a></li>
     </ul>
     <div class='landing'>
       <h1>Vi Vo</h1>
-      <h3>UI UX Engineer</h3>
+      <h3>< UI UX Engineer /></h3>
     </div>
 
     <svg width="100%" height="50px" viewBox="0 0 30 30" preserveAspectRatio="none">
@@ -27,7 +27,7 @@
 
     <h2>About</h2>
       <p>I believe in making life more enjoyable. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, it follows that I can make a handsome impact building applications. I became a full stack software engineer so that I can have the freedom to build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
-    <h2>Skills</h2>
+    <h2><a name='skills'>Skills</a></h2>
       <h3>Front-end:</h3>
         <ul>
           <li>JavaScript</li>
