--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>title</title>
     <link rel='stylesheet' type='text/css' href='styles.css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="./app.js"></script>
   </head>
   <body>
     <ul class='nav'>
@@ -21,13 +23,13 @@
     </div>
 
     <svg width="100%" height="50px" viewBox="0 0 30 30" preserveAspectRatio="none">
-    <polygon fill='grey' stroke-width='0'
-             points="4,30 10,0 20,0 26,30"/>
+      <polygon fill='grey' stroke-width='0'
+               points="4,30 10,0 20,0 26,30"/>
     </svg>
 
     <h2>About</h2>
       <p>I believe in making life more enjoyable. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, it follows that I can make a handsome impact building applications. I became a full stack software engineer so that I can have the freedom to build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
-    <h2><a name='skills'>Skills</a></h2>
+    <h2><a name='skills' id='skills'>Skills</a></h2>
       <h3>Front-end:</h3>
         <ul>
           <li>JavaScript</li>
@@ -58,5 +60,6 @@
           <li>Third Party APIs</li>
           <li>Photoshop</li>
         </ul>
+    <script type="text/javascript">$(function(){app.init();})</script>
   </body>
 </html>
