allow scrolling up

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   </head>
   <body>
     <ul class='nav'>
-      <li id='home'>Vi Vo</li>
+      <li id='home'><a href='#top'>Vi Vo</a></li>
       <li>Contact</li>
       <li>Hobby</li>
       <li>Portfolio</li>
       <li><a href='#skills'>Skills</a></li>
     </ul>
-    <div class='landing'>
-      <h1>Vi Vo</h1>
+    <div id='top' class='landing'>
+      <h1 >Vi Vo</h1>
       <h3>< UI UX Engineer /></h3>
     </div>
 
