fix box on about section

--- a/index.html
+++ b/index.html
@@ -22,44 +22,62 @@
       <h3>< UI UX Engineer /></h3>
     </div>
 
-    <svg width="100%" height="50px" viewBox="0 0 30 30" preserveAspectRatio="none">
+    <div class='svg'>
+      <svg width="100%" height="40px" viewBox="0 0 30 30" preserveAspectRatio="none">
+        <polygon fill='grey' stroke-width='0'
+                 points="0,30 10,0 20,0 30,30"/>
+      </svg>
+    </div>
+
+    <div class='topic'>
+      <h2>About</h2>
+        <div class='col-4'>
+          <img id='me' src='assets/FullSizeRender.jpg'>
+        </div>
+        <div class='col-6'>
+          <p>I believe in making life more enjoyable. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, it follows that I can make a handsome impact building applications. I became a full stack software engineer so that I can have the freedom to build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
+        </div>
+    </div>
+
+    <svg width="100%" height="40px" viewBox="0 0 30 30" preserveAspectRatio="none">
       <polygon fill='grey' stroke-width='0'
                points="4,30 10,0 20,0 26,30"/>
     </svg>
 
-    <h2>About</h2>
-      <p>I believe in making life more enjoyable. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, it follows that I can make a handsome impact building applications. I became a full stack software engineer so that I can have the freedom to build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
-    <h2><a name='skills' id='skills'>Skills</a></h2>
-      <h3>Front-end:</h3>
-        <ul>
-          <li>JavaScript</li>
-          <li>HTML5</li>
-          <li>CSS3</li>
-          <li>jQuery</li>
-          <li>MVC</li>
-          <li>ReactJS</li>
-          <li>AngularJS</li>
-        </ul>
-      <h3>Back-end:</h3>
-        <ul>
-          <li>NodeJS</li>
-          <li>ExpressJS</li>
-          <li>MySQL</li>
-          <li>Sequelize</li>
-          <li>MongoDB</li>
-          <li>Mongoose</li>
-          <li>Kron</li>
-        </ul>
-      <h3>General:</h3>
-        <ul>
-          <li>Git</li>
-          <li>Grunt</li>
-          <li>Gulp</li>
-          <li>TDD</li>
-          <li>Restful APIs</li>
-          <li>Third Party APIs</li>
-          <li>Photoshop</li>
-        </ul>
+    <div class='topic'>
+      <h2><a name='skills' id='skills'>Skills</a></h2>
+        <h3>Front-end:</h3>
+          <ul>
+            <li>JavaScript</li>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>jQuery</li>
+            <li>MVC</li>
+            <li>ReactJS</li>
+            <li>AngularJS</li>
+          </ul>
+        <h3>Back-end:</h3>
+          <ul>
+            <li>NodeJS</li>
+            <li>ExpressJS</li>
+            <li>MySQL</li>
+            <li>Sequelize</li>
+            <li>MongoDB</li>
+            <li>Mongoose</li>
+            <li>Kron</li>
+          </ul>
+        <h3>General:</h3>
+          <ul>
+            <li>Git</li>
+            <li>Grunt</li>
+            <li>Gulp</li>
+            <li>TDD</li>
+            <li>Restful APIs</li>
+            <li>Third Party APIs</li>
+            <li>Photoshop</li>
+          </ul>
+    </div>
+
     <script type="text/javascript">$(function(){app.init();})</script>
   </body>
 </html>
