--- a/index.html
+++ b/index.html
@@ -23,26 +23,30 @@
     </div>
 
     <div class='svg'>
-      <svg width="100%" height="40px" viewBox="0 0 30 30" preserveAspectRatio="none">
-        <polygon fill='grey' stroke-width='0'
-                 points="0,30 10,0 20,0 30,30"/>
+      <svg width="100%" height="3em" viewBox="0 0 30 30" preserveAspectRatio="none">
+        <polygon fill='#bbbbbb' stroke-width='0'
+                 points="0,30 5,0 25,0 30,30"/>
       </svg>
     </div>
 
     <div class='topic'>
       <h2>About</h2>
-        <div class='col-4'>
-          <img id='me' src='assets/FullSizeRender.jpg'>
-        </div>
-        <div class='col-6'>
-          <p>I believe in making life more enjoyable. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, it follows that I can make a handsome impact building applications. I became a full stack software engineer so that I can have the freedom to build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
+        <div class='row'>
+          <div class='col-4'>
+            <img id='me' src='assets/FullSizeRender.jpg'>
+          </div>
+          <div class='col-6'>
+            <p>I believe in making life more enjoyable. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, it follows that I can make a handsome impact building applications. I became a full stack software engineer so that I can have the freedom to build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
+          </div>
         </div>
     </div>
 
-    <svg width="100%" height="40px" viewBox="0 0 30 30" preserveAspectRatio="none">
-      <polygon fill='grey' stroke-width='0'
-               points="4,30 10,0 20,0 26,30"/>
-    </svg>
+    <div class='svg'>
+      <svg width="100%" height="3em" viewBox="0 0 30 30" preserveAspectRatio="none">
+        <polygon fill='#bbbbbb' stroke-width='0'
+                 points="0,30 5,0 25,0 30,30"/>
+      </svg>
+    </div>
 
     <div class='topic'>
       <h2><a name='skills' id='skills'>Skills</a></h2>
