add styling to skills section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img id='me' src='assets/FullSizeRender.jpg'>
           </div>
           <div class='col-6'>
-            <p>I believe in making life more enjoyable. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, it follows that I can make a handsome impact building applications. I became a full stack software engineer so that I can have the freedom to build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
+            <p>I believe in making life more enjoyable. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, it makes sense for me to build applications. I became a full stack software engineer so that I can have the freedom to build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
           </div>
         </div>
     </div>
@@ -50,36 +50,44 @@
 
     <div class='topic'>
       <h2><a name='skills' id='skills'>Skills</a></h2>
-        <h3>Front-end:</h3>
-          <ul>
-            <li>JavaScript</li>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>jQuery</li>
-            <li>MVC</li>
-            <li>ReactJS</li>
-            <li>AngularJS</li>
-          </ul>
-        <h3>Back-end:</h3>
-          <ul>
-            <li>NodeJS</li>
-            <li>ExpressJS</li>
-            <li>MySQL</li>
-            <li>Sequelize</li>
-            <li>MongoDB</li>
-            <li>Mongoose</li>
-            <li>Kron</li>
-          </ul>
-        <h3>General:</h3>
-          <ul>
-            <li>Git</li>
-            <li>Grunt</li>
-            <li>Gulp</li>
-            <li>TDD</li>
-            <li>Restful APIs</li>
-            <li>Third Party APIs</li>
-            <li>Photoshop</li>
-          </ul>
+      <div class='row'>
+        <div class='col-4 skill'>
+            <h3>Front-end:</h3>
+              <ul>
+                <li>JavaScript</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>jQuery</li>
+                <li>MVC</li>
+                <li>ReactJS</li>
+                <li>AngularJS</li>
+              </ul>
+          </div>
+          <div class='col-4 skill'>
+            <h3>Back-end:</h3>
+              <ul>
+                <li>NodeJS</li>
+                <li>ExpressJS</li>
+                <li>MySQL</li>
+                <li>Sequelize</li>
+                <li>MongoDB</li>
+                <li>Mongoose</li>
+                <li>Kron</li>
+              </ul>
+            </div>
+          <div class='col-4 skill'>
+            <h3>General:</h3>
+              <ul>
+                <li>Git</li>
+                <li>Grunt</li>
+                <li>Gulp</li>
+                <li>TDD</li>
+                <li>Restful APIs</li>
+                <li>Third Party APIs</li>
+                <li>Photoshop</li>
+              </ul>
+          </div>
+      </div>
     </div>
 
     <script type="text/javascript">$(function(){app.init();})</script>
