complete front-end section of skills

--- a/index.html
+++ b/index.html
@@ -41,19 +41,29 @@
                   <div class="skillbar-bar javascript"></div>
                 </div>
 
-                <div class="skillbar clearfix" data-percent="90%">
-                  <div class="skillbar-title html"><span>HTML5</span></div>
-                  <div class="skillbar-bar html"></div>
-                </div>
-
                 <div class="skillbar clearfix " data-percent="85%">
                   <div class="skillbar-title css"><span>CSS3</span></div>
                   <div class="skillbar-bar css"></div>
                 </div>
 
+                <div class="skillbar clearfix" data-percent="90%">
+                  <div class="skillbar-title html"><span>HTML5</span></div>
+                  <div class="skillbar-bar html"></div>
+                </div>
+
                 <div class="skillbar clearfix " data-percent="65%">
                   <div class="skillbar-title jquery"><span>jQuery</span></div>
                   <div class="skillbar-bar jquery"></div>
+                </div>
+
+                <div class="skillbar clearfix " data-percent="85%">
+                  <div class="skillbar-title angular"><span>AngularJS</span></div>
+                  <div class="skillbar-bar angular"></div>
+                </div>
+
+                <div class="skillbar clearfix " data-percent="85%">
+                  <div class="skillbar-title react"><span>ReactJS</span></div>
+                  <div class="skillbar-bar react"></div>
                 </div>
 <!--            <li>JavaScript</li>
                 <li>HTML5</li>
