adjust skill bar colors

--- a/index.html
+++ b/index.html
@@ -37,46 +37,71 @@
             <h3>Front-end:</h3>
               <ul>
                 <div class="skillbar clearfix" data-percent="95%">
-                  <div class="skillbar-title javascript"><span>JavaScript</span></div>
                   <div class="skillbar-bar javascript"></div>
+                  <div class="skillbar-title javascript"><span>JavaScript</span></div>
                 </div>
 
                 <div class="skillbar clearfix " data-percent="85%">
-                  <div class="skillbar-title css"><span>CSS3</span></div>
                   <div class="skillbar-bar css"></div>
+                  <div class="skillbar-title css"><span>CSS3</span></div>
                 </div>
 
                 <div class="skillbar clearfix" data-percent="90%">
-                  <div class="skillbar-title html"><span>HTML5</span></div>
                   <div class="skillbar-bar html"></div>
+                  <div class="skillbar-title html"><span>HTML5</span></div>
                 </div>
 
                 <div class="skillbar clearfix " data-percent="65%">
-                  <div class="skillbar-title jquery"><span>jQuery</span></div>
                   <div class="skillbar-bar jquery"></div>
+                  <div class="skillbar-title jquery"><span>jQuery</span></div>
                 </div>
 
                 <div class="skillbar clearfix " data-percent="85%">
-                  <div class="skillbar-title angular"><span>AngularJS</span></div>
                   <div class="skillbar-bar angular"></div>
+                  <div class="skillbar-title angular"><span>AngularJS</span></div>
                 </div>
 
                 <div class="skillbar clearfix " data-percent="85%">
-                  <div class="skillbar-title react"><span>ReactJS</span></div>
                   <div class="skillbar-bar react"></div>
+                  <div class="skillbar-title react"><span>ReactJS</span></div>
                 </div>
-<!--            <li>JavaScript</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>jQuery</li>
-                <li>MVC</li>
-                <li>ReactJS</li>
-                <li>AngularJS</li> -->
               </ul>
           </div>
           <div class='col-4 skill'>
             <h3>Back-end:</h3>
               <ul>
+                <div class="skillbar clearfix" data-percent="85%">
+                  <div class="skillbar-bar node"></div>
+                  <div class="skillbar-title node"><span>NodeJS</span></div>
+                </div>
+
+                <div class="skillbar clearfix " data-percent="85%">
+                  <div class="skillbar-bar express"></div>
+                  <div class="skillbar-title express"><span>ExpressJS</span></div>
+                </div>
+
+                <div class="skillbar clearfix " data-percent="75%">
+                  <div class="skillbar-bar css"></div>
+                  <div class="skillbar-title css"><span>Kron</span></div>
+                </div>
+
+                <div class="skillbar clearfix" data-percent="80%">
+                  <div class="skillbar-bar sql"></div>
+                  <div class="skillbar-title sql"><span>MySQL</span></div>
+                </div>
+
+                <div class="skillbar clearfix " data-percent="85%">
+                  <div class="skillbar-bar mongo"></div>
+                  <div class="skillbar-title mongo"><span>MongoDB</span></div>
+                </div>
+
+                <div class="skillbar clearfix " data-percent="85%">
+                  <div class="skillbar-bar angular"></div>
+                  <div class="skillbar-title angular"><span>Mongoose</span></div>
+                </div>
+
+              </ul>
+              <!-- <ul>
                 <li>NodeJS</li>
                 <li>ExpressJS</li>
                 <li>MySQL</li>
@@ -84,7 +109,7 @@
                 <li>MongoDB</li>
                 <li>Mongoose</li>
                 <li>Kron</li>
-              </ul>
+              </ul> -->
             </div>
           <div class='col-4 skill'>
             <h3>General:</h3>
