change order of skills

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                   <div class="skillbar-title javascript"><span>JavaScript</span></div>
                 </div>
 
-                <div class="skillbar clearfix " data-percent="85%">
-                  <div class="skillbar-bar css"></div>
-                  <div class="skillbar-title css"><span>CSS3</span></div>
-                </div>
-
                 <div class="skillbar clearfix" data-percent="90%">
                   <div class="skillbar-bar html"></div>
                   <div class="skillbar-title html"><span>HTML5</span></div>
+                </div>
+
+                <div class="skillbar clearfix " data-percent="85%">
+                  <div class="skillbar-bar angular"></div>
+                  <div class="skillbar-title angular"><span>AngularJS</span></div>
                 </div>
 
                 <div class="skillbar clearfix " data-percent="65%">
@@ -57,8 +57,8 @@
                 </div>
 
                 <div class="skillbar clearfix " data-percent="85%">
-                  <div class="skillbar-bar angular"></div>
-                  <div class="skillbar-title angular"><span>AngularJS</span></div>
+                  <div class="skillbar-bar css"></div>
+                  <div class="skillbar-title css"><span>CSS3</span></div>
                 </div>
 
                 <div class="skillbar clearfix " data-percent="85%">
@@ -80,6 +80,11 @@
                   <div class="skillbar-title express"><span>ExpressJS</span></div>
                 </div>
 
+                <div class="skillbar clearfix " data-percent="85%">
+                  <div class="skillbar-bar mongo"></div>
+                  <div class="skillbar-title mongo"><span>MongoDB</span></div>
+                </div>
+
                 <div class="skillbar clearfix " data-percent="75%">
                   <div class="skillbar-bar css"></div>
                   <div class="skillbar-title css"><span>Kron</span></div>
@@ -91,37 +96,45 @@
                 </div>
 
                 <div class="skillbar clearfix " data-percent="85%">
-                  <div class="skillbar-bar mongo"></div>
-                  <div class="skillbar-title mongo"><span>MongoDB</span></div>
-                </div>
-
-                <div class="skillbar clearfix " data-percent="85%">
                   <div class="skillbar-bar angular"></div>
                   <div class="skillbar-title angular"><span>Mongoose</span></div>
                 </div>
-
               </ul>
-              <!-- <ul>
-                <li>NodeJS</li>
-                <li>ExpressJS</li>
-                <li>MySQL</li>
-                <li>Sequelize</li>
-                <li>MongoDB</li>
-                <li>Mongoose</li>
-                <li>Kron</li>
-              </ul> -->
             </div>
+
           <div class='col-4 skill'>
             <h3>General:</h3>
               <ul>
-                <li>Git</li>
-                <li>Grunt</li>
-                <li>Gulp</li>
-                <li>TDD</li>
-                <li>Restful APIs</li>
-                <li>Third Party APIs</li>
-                <li>Photoshop</li>
-              </ul>
+                  <div class="skillbar clearfix " data-percent="85%">
+                    <div class="skillbar-bar sql"></div>
+                    <div class="skillbar-title sql"><span>Grunt</span></div>
+                  </div>
+
+                  <div class="skillbar clearfix" data-percent="80%">
+                    <div class="skillbar-bar html"></div>
+                    <div class="skillbar-title html"><span>Git</span></div>
+                  </div>
+
+                  <div class="skillbar clearfix " data-percent="75%">
+                    <div class="skillbar-bar gulp"></div>
+                    <div class="skillbar-title gulp"><span>3rd APIs</span></div>
+                  </div>
+
+                  <div class="skillbar clearfix" data-percent="70%">
+                    <div class="skillbar-bar jasmine"></div>
+                    <div class="skillbar-title jasmine"><span>Jasmine</span></div>
+                  </div>
+
+                  <div class="skillbar clearfix " data-percent="90%">
+                    <div class="skillbar-bar jquery"></div>
+                    <div class="skillbar-title jquery"><span>Photoshop</span></div>
+                  </div>
+
+                  <div class="skillbar clearfix " data-percent="85%">
+                    <div class="skillbar-bar react"></div>
+                    <div class="skillbar-title react"><span>REST</span></div>
+                  </div>
+                </ul>
           </div>
       </div>
     </div>
