--- a/index.html
+++ b/index.html
@@ -23,17 +23,11 @@
       <h3>< UI UX Engineer /></h3>
     </div>
 
-    <div class='svg'>
-      <svg width="100%" height="3em" viewBox="0 0 30 30" preserveAspectRatio="none">
-        <polygon fill='#bbbbbb' stroke-width='0'
-                 points="0,30 5,0 25,0 30,30"/>
-      </svg>
-    </div>
 
     <div class='topic'>
       <h2><a name='skills' id='skills'>Skills</a></h2>
       <div class='row'>
-        <div class='col-4 skill'>
+        <div class='col-4 skill backing'>
             <h3>Front-end:</h3>
               <ul>
                 <div class="skillbar clearfix" data-percent="95%">
@@ -67,7 +61,7 @@
                 </div>
               </ul>
           </div>
-          <div class='col-4 skill'>
+          <div class='col-4 skill backing'>
             <h3>Back-end:</h3>
               <ul>
                 <div class="skillbar clearfix" data-percent="85%">
@@ -102,7 +96,7 @@
               </ul>
             </div>
 
-          <div class='col-4 skill'>
+          <div class='col-4 skill backing'>
             <h3>General:</h3>
               <ul>
                   <div class="skillbar clearfix " data-percent="85%">
@@ -139,11 +133,11 @@
       </div>
     </div>
 
-       <div class='svg'>
-      <svg width="100%" height="3em" viewBox="0 0 30 30" preserveAspectRatio="none">
-        <polygon fill='#bbbbbb' stroke-width='0'
-                 points="0,30 5,0 25,0 30,30"/>
-      </svg>
+
+    <div class='topic'>
+      <h2 id='portfolio'>Portfolio</h2>
+        <div class='row'>
+        </div>
     </div>
 
     <div class='topic'>
