add more content and images to portfolio section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>title</title>
+    <title>Vi Vo</title>
     <link rel='stylesheet' type='text/css' href='styles.css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -13,8 +13,8 @@
     <ul class='nav'>
       <li id='home'><a href='#top'>Vi Vo</a></li>
       <li>Contact</li>
-      <li>Hobby</li>
-      <li>Portfolio</li>
+      <li><a href='#hobby'>Hobby</a></li>
+      <li><a href='#portfolio'>Portfolio</a></li>
       <li><a href='#skills'>Skills</a></li>
       <li><a href='#about'>About</a></li>
     </ul>
@@ -136,18 +136,75 @@
 
     <div class='topic'>
       <h2 id='portfolio'>Portfolio</h2>
+
         <div class='row'>
+          <div class='col-6'>
+            <img class='app' src='assets/rapport.png'>
+          </div>
+          <div class='col-6 info'>
+            <img src='assets/AngularJS.png'>
+            <img src='assets/sql.png'>
+            <img src='assets/facebook.png'>
+            <img src='assets/javascript.png'>
+            <h3>Rapport</h3>
+            <p>Rapport automates messages and emails on facebook and gmail based on custom intervals. On the front end, I designed and styled the app using Bootstrap, HTML, and CSS. On the back end, I added a Giphy feature, set up the Kron job, linked the application with Google Gmail and Contacts API.</p>
+          </div>
+        </div>
+        <div class='row'>
+          <div class='col-6 info'>
+            <img src='assets/react.png'>
+            <img src='assets/mongo.png'>
+            <img src='assets/node.png'>
+            <img src='assets/javascript.png'>
+            <h3>OkPluto</h3>
+            <p>OkPluto is a social networking app for dog owners and dog enthusiasts. The application features local search results for events, dog owners, and dog rentals. I created manage visitor and logged in states and created components to render them appropriately.</p>
+          </div>
+          <div class='col-6'>
+            <img class='app' src='assets/okpluto.png'>
+          </div>
+        </div>
+        <div class='row'>
+          <div class='col-6'>
+            <img class='app' src='assets/persona.png'>
+          </div>
+          <div class='col-6 info'>
+            <img src='assets/ibm.png'>
+            <img src='assets/react.png'>
+            <img src='assets/mongo.png'>
+            <img src='assets/javascript.png'>
+            <h3>Persona</h3>
+            <p>Persona is a social networking application that matches users based on personality portraits derived from twitter feeds. I wrote the algorithm for determining users with similar personalities and integrated the IBM watson API.</p>
+          </div>
+        </div>
+        <div class='row'>
+          <div class='col-6 info'>
+            <img src='assets/AngularJS.png'>
+            <img src='assets/node.png'>
+            <img src='assets/javascript.png'>
+            <h3>ColorGen</h3>
+            <p>ColorGen generates color schemes and lets designers see their designs in different colors. I created this entire app.</p>
+          </div>
+          <div class='col-6'>
+            <img class='app' src='assets/colorgen.png'>
+          </div>
+        </div>
+
+    </div>
+
+    <div class='topic'>
+      <h2 id='hobby'>Hobby</h2>
+        <div class='row'>
+          <div class='col-6 art'>
+            <img src='assets/bottle.jpg'>
+          </div>
         </div>
     </div>
 
     <div class='topic'>
       <h2 id='about'>About</h2>
         <div class='row'>
-          <div class='col-4'>
-            <img id='me' src='assets/FullSizeRender.jpg'>
-          </div>
-          <div class='col-6'>
-            <p>I believe in making life more enjoyable. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, it makes sense for me to build applications. I became a full stack software engineer so that I can have the freedom to build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
+          <div class='col-12'>
+            <p>I am a UI UX engineer based in Fremont, California. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, I set out to make the screen-world a better place. I became a full stack software engineer so that I can have the freedom to build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
           </div>
         </div>
     </div>
