add hobby section and dynamically size images

--- a/index.html
+++ b/index.html
@@ -194,8 +194,14 @@
     <div class='topic'>
       <h2 id='hobby'>Hobby</h2>
         <div class='row'>
-          <div class='col-6 art'>
+          <div class='col-3 art'>
             <img src='assets/bottle.jpg'>
+          </div>
+          <div class='col-3 art'>
+            <img src='assets/persimmon.jpg'>
+          </div>
+          <div class='col-6 art'>
+            <img src='assets/abstract.jpg'>
           </div>
         </div>
     </div>
