switch order of about and hobby

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <li id='home'><a href='#top'>Vi Vo</a></li>
       <li>Contact</li>
       <li><a href='#hobby'>Hobby</a></li>
+      <li><a href='#about'>About</a></li>
       <li><a href='#portfolio'>Portfolio</a></li>
       <li><a href='#skills'>Skills</a></li>
-      <li><a href='#about'>About</a></li>
     </ul>
     <div id='top' class='landing'>
       <h1 >Vi Vo</h1>
@@ -192,25 +192,33 @@
     </div>
 
     <div class='topic'>
-      <h2 id='hobby'>Hobby</h2>
+      <h2 id='about'>About</h2>
         <div class='row'>
-          <div class='col-3 art'>
-            <img src='assets/bottle.jpg'>
-          </div>
-          <div class='col-3 art'>
-            <img src='assets/persimmon.jpg'>
-          </div>
-          <div class='col-6 art'>
-            <img src='assets/abstract.jpg'>
+          <div class='col-12'>
+            <p>I am a UI UX engineer based in Fremont, California. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, I set out to make the screen-world a better place. I became a full stack software engineer so that I can build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
           </div>
         </div>
     </div>
 
     <div class='topic'>
-      <h2 id='about'>About</h2>
+      <h2 id='hobby'>Hobby</h2>
         <div class='row'>
           <div class='col-12'>
-            <p>I am a UI UX engineer based in Fremont, California. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, I set out to make the screen-world a better place. I became a full stack software engineer so that I can have the freedom to build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
+            <p>In my free time, I enjoy drawing and painting, wine, and food.</p>
+          </div>
+        </div>
+        <div class='row'>
+          <div class='col-3 art'>
+            <img src='assets/bottle.jpg'>
+            <p>Pastel on Paper</p>
+          </div>
+          <div class='col-3 art'>
+            <img src='assets/persimmon.jpg'>
+            <p>Oil on Canvas</p>
+          </div>
+          <div class='col-6 art'>
+            <img src='assets/abstract.jpg'>
+            <p>Graphite on Paper</p>
           </div>
         </div>
     </div>
