add back to top section

--- a/index.html
+++ b/index.html
@@ -223,6 +223,14 @@
         </div>
     </div>
 
+    <a href='#top'>
+      <div class='topic'>
+        <div class='col-12'>
+            <h2>Back to Top ↑</h2>
+        </div>
+      </div>
+    </a>
+
     <script type="text/javascript">$(function(){app.init();})</script>
   </body>
 </html>
