add links to portfolio images and add hover effects

--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
 
         <div class='row'>
           <div class='col-6'>
-            <img class='app' src='assets/rapport.png'>
+            <a class='image' target="_blank" href='https://social-rapport.herokuapp.com/'>
+              <img class='app' src='assets/rapport.png'>
+            </a>
           </div>
           <div class='col-6 info'>
             <img src='assets/AngularJS.png'>
@@ -160,12 +162,16 @@
             <p>OkPluto is a social networking app for dog owners and dog enthusiasts. The application features local search results for events, dog owners, and dog rentals. I created manage visitor and logged in states and created components to render them appropriately.</p>
           </div>
           <div class='col-6'>
-            <img class='app' src='assets/okpluto.png'>
+            <a class='image' target="_blank" href='https://okpluto-app.herokuapp.com/'>
+              <img class='app' src='assets/okpluto.png'>
+            </a>
           </div>
         </div>
         <div class='row'>
           <div class='col-6'>
-            <img class='app' src='assets/persona.png'>
+            <a class='image' target="_blank" href='https://app-persona.herokuapp.com'>
+              <img class='app' src='assets/persona.png'>
+            </a>
           </div>
           <div class='col-6 info'>
             <img src='assets/ibm.png'>
@@ -185,7 +191,9 @@
             <p>ColorGen generates color schemes and lets designers see their designs in different colors. I created this entire app.</p>
           </div>
           <div class='col-6'>
-            <img class='app' src='assets/colorgen.png'>
+            <a class='image' target="_blank" href='https://thawing-wave-64679.herokuapp.com/'>
+              <img class='app' src='assets/colorgen.png'>
+            </a>
           </div>
         </div>
 
