--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h3>< UI UX Engineer /></h3>
     </div>
 
-
+  <div class='container'>
     <div class='topic'>
       <h2><a name='skills' id='skills'>Skills</a></h2>
       <div class='row'>
@@ -199,6 +199,8 @@
 
     </div>
 
+<div class='row contact'>
+  <div class='col-6'>
     <div class='topic'>
       <h2 id='about'>About</h2>
         <div class='row'>
@@ -207,6 +209,19 @@
           </div>
         </div>
     </div>
+  </div>
+
+  <div class='col-6'>
+    <div class='topic'>
+      <h2 id='about'>About</h2>
+        <div class='row'>
+          <div class='col-12'>
+            <p>I am a UI UX engineer based in Fremont, California. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, I set out to make the screen-world a better place. I became a full stack software engineer so that I can build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
 
     <div class='topic'>
       <h2 id='hobby'>Hobby</h2>
@@ -238,6 +253,7 @@
         </div>
       </div>
     </a>
+</div>
 
     <script type="text/javascript">$(function(){app.init();})</script>
   </body>
