add about section

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <ul class='nav'>
       <li id='home'><a href='#top'>Vi Vo</a></li>
-      <li>Contact</li>
       <li><a href='#hobby'>Hobby</a></li>
+      <li><a href='#contact'>Contact</li>
       <li><a href='#about'>About</a></li>
       <li><a href='#portfolio'>Portfolio</a></li>
       <li><a href='#skills'>Skills</a></li>
@@ -213,10 +213,13 @@
 
   <div class='col-6'>
     <div class='topic'>
-      <h2 id='about'>About</h2>
+      <h2 id='contact'>Contact</h2>
         <div class='row'>
           <div class='col-12'>
-            <p>I am a UI UX engineer based in Fremont, California. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, I set out to make the screen-world a better place. I became a full stack software engineer so that I can build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
+              <p>Email me at vi.uyen.vo@gmail.com or find my other profiles below:</p>
+              <a target='_blank' href='https://github.com/vivo-un/'><img src='assets/github.png'></a>
+              <a target='_blank' href='https://www.linkedin.com/in/vi-vo'><img src='assets/linkedin.png'></a>
+              <a target='_blank' href='https://angel.co/vi-vo'><img src='assets/angel.png'></a>
           </div>
         </div>
     </div>
